DASHBOARD TERMIMADO META / AVANCE

--- a/src/app/geovisor/pages/dashboard/dashboard.component.html
+++ b/src/app/geovisor/pages/dashboard/dashboard.component.html
@@ -53,6 +53,36 @@
         </div>
       </div>
     </div>
+    <div class="bg-white rounded-2xl shadow-lg border p-6">
+      <h2 class="text-lg md:text-xl font-semibold text-gray-800 mb-4 text-left">
+        META & AVANCE / POR OFICINA ZONAL
+      </h2>
+      <div class="grid grid-cols-1 md:grid-cols-2 gap-1">
+        <!-- Gráfico 1 -->
+        <div class="w-full aspect-square max-w-sm mx-auto">
+          <canvas id="graficoMeta" class="w-full h-full"></canvas>
+        </div>
+        <!-- Gráfico 2 (barras horizontales) -->
+        <div class="w-full max-w-3xl mx-auto h-[400px]">
+          <canvas id="graficoMetaOZ" class="w-full h-full"></canvas>
+        </div>
+      </div>
+    </div>
+    <div class="bg-white rounded-2xl shadow-lg border p-6">
+      <h2 class="text-lg md:text-xl font-semibold text-gray-800 mb-4 text-left">
+        CAFE / CACAO
+      </h2>
+      <div class="grid grid-cols-1 md:grid-cols-2 gap-1">
+        <!-- Gráfico 1 -->
+        <div class="w-full max-w-3xl mx-auto h-[400px]">
+          <canvas id="graficoMetaOZCAFE" class="w-full h-full"></canvas>
+        </div>
+        <!-- Gráfico 2 (barras horizontales) -->
+        <div class="w-full max-w-3xl mx-auto h-[400px]">
+          <canvas id="graficoMetaOZCACAO" class="w-full h-full"></canvas>
+        </div>
+      </div>
+    </div>
     <!-- FIND ESTADISTICA SOBRE HECTAREAS -->
 
     <!-- ESTADISTICA SOBRE FAMILIAS -->
