--- a/src/app/geovisor/pages/dashboard/dashboard.component.html
+++ b/src/app/geovisor/pages/dashboard/dashboard.component.html
@@ -1,8 +1,12 @@
-<div
-  class="flex flex-col md:flex-row w-screen h-screen bg-slate-100 text-black antialiased selection:bg-blue-600 selection:text-white overflow-hidden">
+<app-navbar></app-navbar>
+<div class="flex flex-col md:flex-row w-screen bg-slate-100 text-black antialiased
+  selection:bg-blue-600 selection:text-white overflow-hidden
+  pt-16 h-screen">
+
   <!-- 📚 Menú lateral -->
-  <app-sidemenu class="w-full md:w-64 bg-[#323232] md:h-full"></app-sidemenu>
+  <app-sidemenu *ngIf="isMenuOpen || isDesktop" class="w-full md:w-64 bg-[#323232] md:h-full"></app-sidemenu>
   <!-- 📊 Contenido principal -->
+
   <div class="flex-1 min-w-0 pt-4 pr-6 pb-6 pl-6 overflow-y-auto space-y-4">
     <!-- ESTADISTICA SOBRE HECTAREAS -->
     <div class="rounded-2xl bg-white p-6 shadow-md ring-1 ring-gray-200">
