Menu del DashBoard

--- a/src/app/geovisor/pages/dashboard/dashboard.component.html
+++ b/src/app/geovisor/pages/dashboard/dashboard.component.html
@@ -1,4 +1,4 @@
-<app-navbar></app-navbar>
+<app-navbarmenu></app-navbarmenu>
 <div class="flex flex-col md:flex-row w-screen bg-slate-100 text-black antialiased
   selection:bg-blue-600 selection:text-white overflow-hidden
   pt-16 h-screen">
