--- a/src/app/auth/pages/welcome/welcome.component.html
+++ b/src/app/auth/pages/welcome/welcome.component.html
@@ -42,7 +42,7 @@
     <h2
       class="mt-2 text-2xl md:text-4xl font-bold hover:text-[#0D9BD7] transition-colors duration-300"
     >
-      SUB. DIRECCIÓN DE MONITOREO
+      DIRECCIÓN DE PROMOCION Y MONITOREO
     </h2>
 
     <!-- Descripción -->
