--- a/src/app/geovisor/pages/dashboard/dashboard.component.html
+++ b/src/app/geovisor/pages/dashboard/dashboard.component.html
@@ -58,7 +58,6 @@
       </div>
     </div>
     <div class="bg-white rounded-2xl shadow-lg border p-6">
-
       <div class="grid grid-cols-1 md:grid-cols-2 gap-1">
         <!-- Gráfico 1 -->
         <div class="w-full aspect-square max-w-sm mx-auto">
@@ -179,5 +178,18 @@
       </div>
     </div>
     <!-- FIN ESTADISTICA POLIGONOS -->
+    
+    <div class="bg-white rounded-2xl shadow-lg border p-6">
+      <div class="grid grid-cols-1 md:grid-cols-2 gap-1">
+        <!-- Gráfico 1 -->
+        <div class="w-full max-w-3xl mx-auto h-[400px]">
+          <canvas id="graficoCantidadOZCAFE" class="w-full h-full"></canvas>
+        </div>
+        <!-- Gráfico 2 (barras horizontales) -->
+        <div class="w-full max-w-3xl mx-auto h-[400px]">
+          <canvas id="graficoCantidadOZCACAO" class="w-full h-full"></canvas>
+        </div>
+      </div>
+    </div>
   </div>
 </div>
