--- a/src/app/geovisor/pages/dashboard/dashboard.component.html
+++ b/src/app/geovisor/pages/dashboard/dashboard.component.html
@@ -130,6 +130,18 @@
       </div>
     </div>
     <!-- FIN ESTADISTICA SOBRE FAMILIAS -->
+    <div class="bg-white rounded-2xl shadow-lg border p-6">
+      <div class="grid grid-cols-1 md:grid-cols-2 gap-1">
+        <!-- Gráfico 1 -->
+        <div class="w-full max-w-3xl mx-auto h-[400px]">
+          <canvas id="graficoCantidadDNIOZCAFE" class="w-full h-full"></canvas>
+        </div>
+        <!-- Gráfico 2 (barras horizontales) -->
+        <div class="w-full max-w-3xl mx-auto h-[400px]">
+          <canvas id="graficoCantidadDNIOZCACAO" class="w-full h-full"></canvas>
+        </div>
+      </div>
+    </div>
 
     <!-- ESTADISTICA POLIGONOS -->
     <div class="rounded-2xl bg-white p-6 shadow-md ring-1 ring-gray-200">
@@ -178,7 +190,7 @@
       </div>
     </div>
     <!-- FIN ESTADISTICA POLIGONOS -->
-    
+
     <div class="bg-white rounded-2xl shadow-lg border p-6">
       <div class="grid grid-cols-1 md:grid-cols-2 gap-1">
         <!-- Gráfico 1 -->
