Fin de Dashboard al 01-09-2025

--- a/src/app/geovisor/pages/dashboard/dashboard.component.html
+++ b/src/app/geovisor/pages/dashboard/dashboard.component.html
@@ -8,6 +8,11 @@
   <!-- 📊 Contenido principal -->
 
   <div class="flex-1 min-w-0 pt-4 pr-6 pb-6 pl-6 overflow-y-auto space-y-4">
+    <h1 class="text-lg sm:text-xl md:text-2xl font-bold text-gray-800 bg-yellow-100 px-4 py-2 rounded-lg shadow-md">
+      Fecha de actualización 30 de julio 2025
+    </h1>
+
+
     <!-- ESTADISTICA SOBRE HECTAREAS -->
     <div class="rounded-2xl bg-white p-6 shadow-md ring-1 ring-gray-200">
       <!-- Título de la tarjeta principal -->
