Reporte ajustando el logo

--- a/src/app/geovisor/components/navbarmenu/navbarmenu.component.html
+++ b/src/app/geovisor/components/navbarmenu/navbarmenu.component.html
@@ -1,7 +1,8 @@
 <div class="fixed top-0 flex items-center justify-between w-full bg-primary px-3 h-16 z-10 shadow-lg">
-   <!-- Logo izquierdo -->
-   <div class="flex items-center gap-2">
-    <!-- Logo grande -->
+
+  <!-- Logo izquierdo / centrado en móvil -->
+  <div class="flex-1 flex items-center md:justify-start justify-center gap-2">
+    <!-- Logo grande (solo escritorio) -->
     <div class="hidden md:block">
       <img
         class="h-14 rounded-md drop-shadow-[0_12px_24px_rgba(255,255,255,1)] transition-all duration-300 ease-in-out hover:scale-110 hover:drop-shadow-[0_20px_32px_rgba(255,255,255,1)]"
@@ -9,7 +10,7 @@
         alt="Logo grande"
       />
     </div>
-    <!-- Logo pequeño -->
+    <!-- Logo pequeño (solo móvil) -->
     <div class="block md:hidden">
       <img
         class="h-14 rounded-md drop-shadow-[0_12px_24px_rgba(255,255,255,1)] transition-all duration-300 ease-in-out hover:scale-110 hover:drop-shadow-[0_20px_32px_rgba(255,255,255,1)]"
@@ -18,9 +19,10 @@
       />
     </div>
   </div>
-  <!-- Título centrado -->
+
+  <!-- Título centrado (solo escritorio grande) -->
   <div
-    class="hidden lg:block text-center text-3xl font-bold"
+    class="hidden lg:block text-center text-3xl font-bold absolute left-1/2 transform -translate-x-1/2"
     style="
       font-family: 'Roboto', sans-serif;
       text-shadow: 1px 1px 2px rgba(100, 100, 100, 0.7);
@@ -29,10 +31,9 @@
   >
     GeoVISOR PIRDAIS
   </div>
-  <div class="flex items-center gap-1">
-   
 
-    <!-- Botón de logout usando clases personalizadas -->
+  <!-- Botón logout a la derecha -->
+  <div class="flex items-center gap-1">
     <button
       (click)="logout()"
       class="logout-wrapper w-10 h-10 flex items-center justify-center rounded-full bg-gray-200 hover:bg-gray-300 shadow-md"
@@ -47,13 +48,11 @@
         stroke-width="1.8"
         stroke="currentColor"
       >
-        <!-- Marco -->
         <path
           stroke-linecap="round"
           stroke-linejoin="round"
           d="M15.75 9V5.25A2.25 2.25 0 0013.5 3h-6A2.25 2.25 0 005.25 5.25v13.5A2.25 2.25 0 007.5 21h6a2.25 2.25 0 002.25-2.25V15"
         />
-        <!-- Flecha -->
         <g class="logout-icon-arrow">
           <path
             stroke-linecap="round"
@@ -64,6 +63,5 @@
       </svg>
     </button>
   </div>
-
 
 </div>
