--- a/src/app/geovisor/pages/dashboard/dashboard.component.html
+++ b/src/app/geovisor/pages/dashboard/dashboard.component.html
@@ -2,17 +2,13 @@
 <div class="flex flex-col md:flex-row w-screen bg-slate-100 text-black antialiased
   selection:bg-blue-600 selection:text-white overflow-hidden
   pt-16 h-screen">
-
   <!-- 📚 Menú lateral -->
   <app-sidemenu *ngIf="isMenuOpen || isDesktop" class="w-full md:w-64 bg-[#323232] md:h-full"></app-sidemenu>
   <!-- 📊 Contenido principal -->
-
   <div class="flex-1 min-w-0 pt-4 pr-6 pb-6 pl-6 overflow-y-auto space-y-4">
     <h1 class="text-lg sm:text-xl md:text-2xl font-bold text-gray-800 bg-yellow-100 px-4 py-2 rounded-lg shadow-md">
       Fecha de actualización 30 de julio 2025
     </h1>
-
-
     <!-- ESTADISTICA SOBRE HECTAREAS -->
     <div class="rounded-2xl bg-white p-6 shadow-md ring-1 ring-gray-200">
       <!-- Título de la tarjeta principal -->
@@ -21,14 +17,14 @@
       </h2>
       <div class="grid grid-cols-1 gap-6 sm:grid-cols-2 lg:grid-cols-4">
         <!-- Meta Total -->
-        <div class="rounded-2xl bg-gray-900 p-6 shadow ring-1 ring-white/10">
+        <div class="rounded-2xl bg-gray-900 p-6 shadow ring-1 ring-white/10 cursor-pointer">
           <p class="text-sm font-medium leading-6 text-white">META EN HECTAREAS</p>
           <p class="mt-2 flex items-baseline gap-x-2">
-            <span class="text-4xl font-semibold tracking-tight text-green-400">62,000</span>
+            <span class="text-4xl font-semibold tracking-tight text-green-400">43,364</span>
           </p>
         </div>
         <!-- Hectáreas Total en Cultivos -->
-        <div class="rounded-2xl bg-gray-900 p-6 shadow ring-1 ring-white/10">
+        <div class="rounded-2xl bg-gray-900 p-6 shadow ring-1 ring-white/10 cursor-pointer">
           <p class="text-sm font-medium leading-6 text-white">AVANCE TOTAL DE CULTIVOS (ha)</p>
           <p class="mt-2 flex items-baseline gap-x-2">
             <span class="text-4xl font-semibold tracking-tight text-green-400">
@@ -37,7 +33,7 @@
           </p>
         </div>
         <!-- Hectáreas de Café -->
-        <div class="relative rounded-2xl bg-gray-900 p-6 shadow ring-1 ring-white/10 overflow-hidden">
+        <div class="relative rounded-2xl bg-gray-900 p-6 shadow ring-1 ring-white/10 overflow-hidden cursor-pointer">
           <img src="assets/img/cafe.webp" class="absolute inset-0 h-full w-full object-cover opacity-30" alt="Café">
           <div class="relative">
             <p class="text-sm font-medium leading-6 text-white">AVANCE TOTAL EN CULTIVO DE CAFE (ha)</p>
@@ -49,7 +45,7 @@
           </div>
         </div>
         <!-- Hectáreas de Cacao -->
-        <div class="relative rounded-2xl bg-gray-900 p-6 shadow ring-1 ring-white/10 overflow-hidden">
+        <div class="relative rounded-2xl bg-gray-900 p-6 shadow ring-1 ring-white/10 overflow-hidden cursor-pointer">
           <img src="assets/img/cacao.jpg" class="absolute inset-0 h-full w-full object-cover opacity-30" alt="Cacao">
           <div class="relative">
             <p class="text-sm font-medium leading-6 text-white">AVANCE TOTAL EN CULTIVO DE CACAO (ha)</p>
@@ -93,7 +89,7 @@
       <h2 class="text-lg font-semibold text-gray-800 mb-6">
         ESTADISTICA EN FAMILIAS
       </h2>
-      <div class="grid grid-cols-1 gap-6 sm:grid-cols-2 lg:grid-cols-4">
+      <div class="grid grid-cols-1 gap-6 sm:grid-cols-2 lg:grid-cols-4 cursor-pointer">
         <div class="rounded-2xl bg-gray-900 p-6 shadow ring-1 ring-white/10">
           <p class="text-sm font-medium leading-6 text-white">TOTAL DE PARTICIPANTES</p>
           <p class="mt-2 flex items-baseline gap-x-2">
@@ -153,7 +149,7 @@
       <h2 class="text-lg font-semibold text-gray-800 mb-6">
         ESTADISTICA EN POLIGONOS
       </h2>
-      <div class="grid grid-cols-1 gap-6 sm:grid-cols-2 lg:grid-cols-4">
+      <div class="grid grid-cols-1 gap-6 sm:grid-cols-2 lg:grid-cols-4 cursor-pointer">
         <div class="rounded-2xl bg-gray-900 p-6 shadow ring-1 ring-white/10">
           <p class="text-sm font-medium leading-6 text-white">TOTAL DE POLIGONOS DE CULTIVOS</p>
           <p class="mt-2 flex items-baseline gap-x-2">
@@ -162,7 +158,7 @@
             </span>
           </p>
         </div>
-        <div class="rounded-2xl bg-gray-900 p-6 shadow ring-1 ring-white/10">
+        <div class="rounded-2xl bg-gray-900 p-6 shadow ring-1 ring-white/10 cursor-pointer">
           <p class="text-sm font-medium leading-6 text-white">TOTAL DE POLIGONOS EN PROCESO</p>
           <p class="mt-2 flex items-baseline gap-x-2">
             <span class="text-4xl font-semibold tracking-tight text-green-400">
@@ -170,7 +166,7 @@
             </span>
           </p>
         </div>
-        <div class="relative rounded-2xl bg-gray-900 p-6 shadow ring-1 ring-white/10 overflow-hidden">
+        <div class="relative rounded-2xl bg-gray-900 p-6 shadow ring-1 ring-white/10 overflow-hidden cursor-pointer">
           <img src="assets/img/cafe.webp" class="absolute inset-0 h-full w-full object-cover opacity-30" alt="Café">
           <div class="relative">
             <p class="text-sm font-medium leading-6 text-white">TOTAL DE POLIGONOS - CAFE</p>
@@ -181,7 +177,7 @@
             </p>
           </div>
         </div>
-        <div class="relative rounded-2xl bg-gray-900 p-6 shadow ring-1 ring-white/10 overflow-hidden">
+        <div class="relative rounded-2xl bg-gray-900 p-6 shadow ring-1 ring-white/10 overflow-hidden cursor-pointer">
           <img src="assets/img/cacao.jpg" class="absolute inset-0 h-full w-full object-cover opacity-30" alt="Cacao">
           <div class="relative">
             <p class="text-sm font-medium leading-6 text-white">TOTAL DE POLIGONOS - CACAO</p>
