--- a/src/app/geovisor/pages/dashboard/dashboard.component.html
+++ b/src/app/geovisor/pages/dashboard/dashboard.component.html
@@ -6,13 +6,13 @@
   <app-sidemenu *ngIf="isMenuOpen || isDesktop" class="w-full md:w-64 bg-[#323232] md:h-full"></app-sidemenu>
   <!-- 📊 Contenido principal -->
   <div class="flex-1 min-w-0 pt-4 pr-6 pb-6 pl-6 overflow-y-auto space-y-4">
-    <h1 class="text-lg sm:text-xl md:text-2xl font-bold text-gray-800 bg-yellow-100 px-4 py-2 rounded-lg shadow-md">
+    <h1 class="text-lg sm:text-xl md:text-2xl font-bold text-white bg-[#0DA642] px-4 py-2 rounded-lg shadow-md">
       Fecha de actualización 30 de julio 2025
     </h1>
     <!-- ESTADISTICA SOBRE HECTAREAS -->
-    <div class="rounded-2xl bg-white p-6 shadow-md ring-1 ring-gray-200">
+    <div class="rounded-2xl bg-[#0D9BD7] p-6 shadow-md ring-1 ring-gray-200">
       <!-- Título de la tarjeta principal -->
-      <h2 class="text-lg font-semibold text-gray-800 mb-6">
+      <h2 class="text-lg font-semibold text-white mb-6">
         ESTADISTICA EN HECTAREAS
       </h2>
       <div class="grid grid-cols-1 gap-6 sm:grid-cols-2 lg:grid-cols-4">
@@ -85,8 +85,8 @@
     <!-- FIND ESTADISTICA SOBRE HECTAREAS -->
 
     <!-- ESTADISTICA SOBRE FAMILIAS -->
-    <div class="rounded-2xl bg-white p-6 shadow-md ring-1 ring-gray-200">
-      <h2 class="text-lg font-semibold text-gray-800 mb-6">
+    <div class="rounded-2xl bg-[#0D9BD7] p-6 shadow-md ring-1 ring-gray-200">
+      <h2 class="text-lg font-semibold text-white mb-6">
         ESTADISTICA EN PARTICIPANTES
       </h2>
       <div class="grid grid-cols-1 gap-6 sm:grid-cols-2 lg:grid-cols-4 cursor-pointer">
@@ -145,7 +145,7 @@
     </div>
 
     <!-- ESTADISTICA POLIGONOS -->
-    <div class="rounded-2xl bg-white p-6 shadow-md ring-1 ring-gray-200">
+    <div class="rounded-2xl bg-[#0D9BD7] p-6 shadow-md ring-1 ring-gray-200">
       <h2 class="text-lg font-semibold text-gray-800 mb-6">
         ESTADISTICA EN POLIGONOS
       </h2>
