--- a/src/app/geovisor/pages/dashboard/dashboard.component.html
+++ b/src/app/geovisor/pages/dashboard/dashboard.component.html
@@ -146,7 +146,7 @@
 
     <!-- ESTADISTICA POLIGONOS -->
     <div class="rounded-2xl bg-[#0D9BD7] p-6 shadow-md ring-1 ring-gray-200">
-      <h2 class="text-lg font-semibold text-gray-800 mb-6">
+      <h2 class="text-lg font-semibold text-white mb-6">
         ESTADISTICA EN POLIGONOS
       </h2>
       <div class="grid grid-cols-1 gap-6 sm:grid-cols-2 lg:grid-cols-4 cursor-pointer">
