--- a/src/app/geovisor/pages/dashboard/dashboard.component.html
+++ b/src/app/geovisor/pages/dashboard/dashboard.component.html
@@ -89,7 +89,15 @@
       <h2 class="text-lg font-semibold text-white mb-6">
         ESTADISTICA EN PARTICIPANTES
       </h2>
-      <div class="grid grid-cols-1 gap-6 sm:grid-cols-2 lg:grid-cols-4 cursor-pointer">
+      <div class="grid grid-cols-1 gap-6 sm:grid-cols-2 lg:grid-cols-5 cursor-pointer">
+        <div class="rounded-2xl bg-gray-900 p-6 shadow ring-1 ring-white/10">
+          <p class="text-sm font-medium leading-6 text-white">META DE PARTICIPANTES</p>
+          <p class="mt-2 flex items-baseline gap-x-2">
+            <span class="text-4xl font-semibold tracking-tight text-green-400">
+              38,313
+            </span>
+          </p>
+        </div>
         <div class="rounded-2xl bg-gray-900 p-6 shadow ring-1 ring-white/10">
           <p class="text-sm font-medium leading-6 text-white">TOTAL DE PARTICIPANTES</p>
           <p class="mt-2 flex items-baseline gap-x-2">
